# predictables-feature-selection-plot

./: README.md  pyproject.toml
src/predictables_feature_selection_plot/: duck_db.py  plotter.py  utils.py
src/predictables_feature_selection_plot/data/: X.parquet  X_test.parquet  X_train.parquet  X_val.parquet  data.duckdb  data.duckdb.wal  order_test.parquet  order_train.parquet  order_val.parquet  y.parquet  y_test.parquet  y_train.parquet  y_val.parquet
src/predictables_feature_selection_plot/model/: __init__.py  base_model.py  logistic_regression.py
src/predictables_feature_selection_plot/tests/: test__fit_glm.py  test__generate_predictions__categorical.py  test__prepare_feature__numerical.py  test__prepare_features.py  test__prepare_features__categorical.py  test_plotter.py
src/predictables_feature_selection_plot/utils/: __init__.py  add_glm_prediction.py  add_scatter_points.py  generate_cat_lookup.py
