[project]
name = "predictables-feature-selection-plot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "plotly>=5.22.0",
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.2",
    "pandas>=2.2.2",
    "polars>=0.20.31",
    "duckdb>=1.0.0",
    "pyarrow>=16.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/predictables_feature_selection_plot"]
